feat: add bloc files

--- a/cybersecurity_quiz_app/pubspec.yaml
+++ b/cybersecurity_quiz_app/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=3.3.3 <4.0.0'
 
 dependencies:
+  bloc: ^8.1.4
   flutter:
     sdk: flutter
+  meta: ^1.11.0
 
 dev_dependencies:
   flutter_test:
