--- a/cybersecurity_quiz_app/pubspec.yaml
+++ b/cybersecurity_quiz_app/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
   meta: ^1.11.0
 
 dev_dependencies:
@@ -20,3 +21,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+  - assets/
