--- a/cybersecurity_quiz_app/pubspec.yaml
+++ b/cybersecurity_quiz_app/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.5
   meta: ^1.11.0
+  shared_preferences: ^2.2.3
   stream_transform: ^2.1.0
 
 dev_dependencies:
